# Savings-Tracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/core/: CORE_API.md  Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/models/: analytics.rs  asset.rs  chart.rs  event.rs  mod.rs  portfolio.rs  price.rs  settings.rs
crates/core/src/providers/: alphavantage.rs  coincap.rs  frankfurter.rs  metals_dev.rs  mod.rs  registry.rs  traits.rs  yahoo_finance.rs
crates/core/src/services/: analytics_service.rs  chart_service.rs  currency_service.rs  mod.rs  portfolio_service.rs  price_service.rs
crates/core/src/storage/: encryption.rs  format.rs  manager.rs  mod.rs
crates/core/tests/: error_tests.rs  integration_tests.rs  model_tests.rs  provider_tests.rs  service_tests.rs  storage_tests.rs
