[package]
name = "savings-tracker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Savings Tracker — portable, encrypted savings/investment tracking"

[lib]
name = "savings_tracker_core"
crate-type = ["lib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
getrandom.workspace = true
reqwest.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yahoo_finance_api.workspace = true
time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
bincode.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
uuid = { workspace = true, features = ["js"] }
